<resources>
    <string name="hint_documento">#Documento</string>
    <string name="hint_nombres">Nombres</string>
    <string name="hint_apellidos">Apellidos</string>
    <string name="hint_telefono">Telefono</string>
    <string name="hint_email">Email</string>
    <string name="hint_cemail">Confirmar Email</string>
    <string name="hint_contrasena">Contraseña</string>
    <string name="hint_negocio">Negocio</string>
    <string name="app_name">mi_plataforma_conectBD</string>
    <string name="administra_tu_negocio">Administra tu negocio</string>
    <string name="iniciar_sesi_n">INICIAR SESIÓN</string>
    <string name="ingresar">Ingresar</string>
    <string name="registrar">Registrar</string>
    <string name="boton_de_atras">boton de atras</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>    
</resources>