<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadeScrollbars="false"
    android:isScrollContainer="false"
    android:keepScreenOn="false"
    tools:context=".Registro">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/teal_700"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="32px">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="261dp"
                        android:layout_height="38dp"
                        app:srcCompat="@drawable/miventa_txt" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Gestiona tu negocio"
                        android:textColor="@color/white"
                        android:textSize="24sp" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center_vertical"
                    app:srcCompat="@drawable/miventa_icono" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btn_atras_r"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="28dp"
                    android:background="@drawable/ic_baseline_lens_24"
                    android:backgroundTint="@color/teal_700"
                    android:tint="@android:color/white"
                    app:srcCompat="?attr/actionModeCloseDrawable"
                    tools:ignore="UseAppTint,SpeakableTextPresentCheck" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="244dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="64px"
                    android:layout_marginTop="29dp"
                    android:fontFamily="serif"
                    android:text="Registro"
                    android:textColor="@color/black"
                    android:textSize="34sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/paso1"
                android:layout_width="327dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:orientation="vertical"
                android:visibility="gone"
                tools:ignore="MissingConstraints">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="32px"
                    android:fontFamily="serif"
                    android:text="Documento:"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Spinner
                        android:id="@+id/spinner_documento"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:spinnerMode="dialog"
                        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                    <EditText
                        android:id="@+id/id_doc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/hint_documento"
                        android:inputType="number"
                        android:textSize="20sp"
                        tools:ignore="TouchTargetSizeCheck" />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="80px"
                    android:fontFamily="serif"
                    android:text="Nombres y Apellidos:"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/nombres"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32px"
                    android:ems="10"
                    android:hint="@string/hint_nombres"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/apellidos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32px"
                    android:ems="10"
                    android:hint="@string/hint_apellidos"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/paso2"
                android:layout_width="327dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:orientation="vertical"
                android:visibility="visible"
                tools:ignore="MissingConstraints">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="32px"
                    android:fontFamily="serif"
                    android:text="Telefono:"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Spinner
                        android:id="@+id/spinner_pais"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:spinnerMode="dialog"
                        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                    <EditText
                        android:id="@+id/telefono"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/hint_telefono"
                        android:inputType="number"
                        android:textSize="20sp"
                        tools:ignore="TouchTargetSizeCheck" />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="80px"
                    android:fontFamily="serif"
                    android:text="Correo Electronico:"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32px"
                    android:ems="10"
                    android:hint="@string/hint_email"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/confirmar_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32px"
                    android:ems="10"
                    android:hint="@string/hint_cemail"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/paso3"
                android:layout_width="327dp"
                android:layout_height="match_parent"
                android:layout_marginTop="35dp"
                android:orientation="vertical"
                android:visibility="gone"
                tools:ignore="MissingConstraints">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="32px"
                    android:fontFamily="serif"
                    android:text="Contraseña:"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/contrasena"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/hint_contrasena"
                        android:inputType="number"
                        android:textSize="20sp"
                        tools:ignore="TouchTargetSizeCheck" />

                </LinearLayout>


                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="32px"
                    android:fontFamily="serif"
                    android:text="Confirmar Contraseña:"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/confirmar_contrasena"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32px"
                    android:ems="10"
                    android:hint="@string/hint_contrasena"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:textSize="20sp" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_registrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="120px"
                android:layout_marginBottom="32px"
                android:fontFamily="serif"
                android:text="SIGUIENTE"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="78dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_b1"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_margin="32px"
                    android:background="@drawable/ic_baseline_lens_24"
                    android:fontFamily="serif"
                    android:text="1"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn_b"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_margin="32px"
                    android:background="@drawable/ic_baseline_lens_24"
                    android:enabled="false"
                    android:fontFamily="serif"
                    android:text="2"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn_b2"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_margin="32px"
                    android:background="@drawable/ic_baseline_lens_24"
                    android:enabled="false"
                    android:fontFamily="serif"
                    android:text="3"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>